list of fixes too long for commit msg

--- a/assets/style/variables.scss
+++ b/assets/style/variables.scss
@@ -1,23 +1,23 @@
 html {
-    --ie-blue: #00AAB5;
-    --ie-pink: #ED0F69;
-    --black: #1E1E1E;
-    --ie-blue--transp: #00AAB5CC;
-    --ie-blue--whiteout: #00a9b563;
-    --ie-blue--light: #e8feff;
-    --ie-pink--transp: #ED0F69CC;
-    --ie-pink--whiteout: #ff85b663;
-    --black--transp: #1E1E1ECC;
-    --light-grey: #e0e0e0;
-    --grey: #939393;
-    --dark-grey: #3b3b3b;
-    --width: 1128px;
-    --max-width: 90vw;
+  --ie-blue: #00aab5;
+  --ie-pink: #ed0f69;
+  --black: #1e1e1e;
+  --ie-blue--transp: #00aab5cc;
+  --ie-blue--whiteout: #00a9b563;
+  --ie-blue--light: #e8feff;
+  --ie-pink--transp: #ed0f69cc;
+  --ie-pink--whiteout: #ff85b663;
+  --black--transp: #1e1e1ecc;
+  --light-grey: #e0e0e0;
+  --grey: #939393;
+  --dark-grey: #3b3b3b;
+  --width: 1128px;
+  --max-width: 90vw;
 
-    --left-limit: calc((100vw - var(--max-width)) / 2);
+  --left-limit: calc((100vw - var(--max-width)) / 2);
 
-    @media screen and (min-width: 1024px) {
-        --width: 1128px;
-        --max-width: 95vw;
-    }
+  @media screen and (min-width: 1024px) {
+    --width: 1280px;
+    --max-width: 95vw;
+  }
 }
